<resources>
    <string name="app_name">AD Proxy</string>
    <string name="dialog_title_special_permissions">Special permissions required</string>
    <string name="dialog_message_special_permissions">This app needs special permissions that can only be granted by connecting this device to your computer and running a command from Terminal. You can find out how in the README.</string>
    <string name="proxy_status_disabled">Disconnected</string>
    <string name="proxy_status_enabled">Connected</string>
    <string name="hint_ip_address">IP Address</string>
    <string name="hint_port">Port</string>
    <string name="error_invalid_port">Please enter a valid port</string>
    <string name="error_invalid_address">Please enter a valid IP address</string>
    <string name="error_invalid_path">Please enter a valid path for rules file</string>
    <string name="dialog_message_information">Uninstalling the app with the proxy enabled will permanently leave your device with this setup.\n\nMake sure the proxy is disabled before uninstalling the app!</string>
    <string name="dialog_action_close">Close</string>
    <string name="no_proxy_tile">No proxy</string>
    <string name="widget_label_ip_address">IP Address</string>
    <string name="widget_label_port">Port</string>
    <string name="widget_not_set">Not set</string>
    <string name="default_ip">127.0.0.1</string>
    <string name="hint_path">Rules Path</string>
</resources>
